August_30/August_30/src/objects/Caller_Verification__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Address__c</fullName>
        <label>Client Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Four_numbers_of_SSN__c</fullName>
        <label>Last Four numbers of SSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Caller Verification</label>
    <nameField>
        <label>Caller Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Caller Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Caller_Verification_With_Name</fullName>
        <columns>Full_Name__c</columns>
        <columns>Verification_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>Caller Verification With Name</label>
    </listViews>
</CustomObject>